Bug 192308 - Random crash when changing settings (DOM::NodeImpl::traverseNextNode, KHTMLPart::runAdFilter, KHTMLPart::reparseConfiguration)
Summary: Random crash when changing settings (DOM::NodeImpl::traverseNextNode, KHTMLPa...
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 190833 198291 198787 200839 202868 204210 206560 206657 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-05-11 11:18 UTC by peaches
Modified: 2009-11-04 22:13 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description peaches 2009-05-11 11:18:34 UTC
Application that crashed: konqueror
Version of the application: 4.2.85 (KDE 4.2.85 (KDE 4.3 Beta1))
KDE Version: 4.2.85 (KDE 4.2.85 (KDE 4.3 Beta1))
Qt Version: 4.5.1
Operating System: Linux 2.6.28-11-generic x86_64
Distribution: Ubuntu 9.04

What I was doing when the application crashed:
Just changed "Small" font in System Settings=>Font settings while Konqueror was open, I think with one tab opened to "bookmarks:"

 -- Backtrace:
Application: Konqueror (konqueror), signal: Segmentation fault
[KCrash Handler]
#5  0x0000000002dad370 in ?? ()
#6  0x00007ff69bc25fea in DOM::NodeImpl::traverseNextNode (this=0x26969c0, stayWithin=0x0) at /opt/kde/trunk/src/KDE/kdelibs/khtml/xml/dom_nodeimpl.cpp:751
#7  0x00007ff69bb8a652 in KHTMLPart::runAdFilter (this=0x23dafa0) at /opt/kde/trunk/src/KDE/kdelibs/khtml/khtml_part.cpp:6521
#8  0x00007ff69bba4f8d in KHTMLPart::reparseConfiguration (this=0x23dafa0) at /opt/kde/trunk/src/KDE/kdelibs/khtml/khtml_part.cpp:5826
#9  0x00007ff69bbe3123 in KHTMLPartBrowserExtension::reparseConfiguration (this=0x24aa2e0) at /opt/kde/trunk/src/KDE/kdelibs/khtml/khtml_ext.cpp:364
#10 0x00007ff69bbf131f in KHTMLPartBrowserExtension::qt_metacall (this=0x24aa2e0, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0x7fffb4316290)
    at /opt/kde/trunk/build/KDE/kdelibs/khtml/khtml_ext.moc:96
#11 0x00007ff6a9764b09 in QMetaMethod::invoke (this=0x7fffb4316540, object=0x24aa2e0, connectionType=Qt::DirectConnection, returnValue=
        {<QGenericArgument> = {_data = 0x0, _name = 0x0}, <No data fields>}, val0={_data = 0x0, _name = 0x0}, val1={_data = 0x0, _name = 0x0}, val2={_data = 0x0, _name = 0x0}, val3=
      {_data = 0x0, _name = 0x0}, val4={_data = 0x0, _name = 0x0}, val5={_data = 0x0, _name = 0x0}, val6={_data = 0x0, _name = 0x0}, val7={_data = 0x0, _name = 0x0}, val8={_data = 0x0, _name = 0x0}, 
    val9={_data = 0x0, _name = 0x0}) at /opt/kde/trunk/src/qt-copy/src/corelib/kernel/qmetaobject.cpp:1522
#12 0x00007ff6a97652cf in QMetaObject::invokeMethod (obj=0x24aa2e0, member=0x7ff6abeb163e "reparseConfiguration", type=Qt::DirectConnection, ret=
        {<QGenericArgument> = {_data = 0x0, _name = 0x0}, <No data fields>}, val0={_data = 0x0, _name = 0x0}, val1={_data = 0x0, _name = 0x0}, val2={_data = 0x0, _name = 0x0}, val3=
      {_data = 0x0, _name = 0x0}, val4={_data = 0x0, _name = 0x0}, val5={_data = 0x0, _name = 0x0}, val6={_data = 0x0, _name = 0x0}, val7={_data = 0x0, _name = 0x0}, val8={_data = 0x0, _name = 0x0}, 
    val9={_data = 0x0, _name = 0x0}) at /opt/kde/trunk/src/qt-copy/src/corelib/kernel/qmetaobject.cpp:1114
#13 0x00007ff6abe2e7a0 in QMetaObject::invokeMethod (obj=0x24aa2e0, member=0x7ff6abeb163e "reparseConfiguration", type=Qt::DirectConnection, val0={_data = 0x0, _name = 0x0}, val1=
      {_data = 0x0, _name = 0x0}, val2={_data = 0x0, _name = 0x0}, val3={_data = 0x0, _name = 0x0}, val4={_data = 0x0, _name = 0x0}, val5={_data = 0x0, _name = 0x0}, val6={_data = 0x0, _name = 0x0}, 
    val7={_data = 0x0, _name = 0x0}, val8={_data = 0x0, _name = 0x0}, val9={_data = 0x0, _name = 0x0}) at /opt/kde/trunk/install/qt-copy/include/QtCore/qobjectdefs.h:387
#14 0x00007ff6abe2610d in KonqView::callExtensionMethod (this=0x23dcba0, methodName=0x7ff6abeb163e "reparseConfiguration") at /opt/kde/trunk/src/KDE/kdebase/apps/konqueror/src/konqview.cpp:1088
#15 0x00007ff6abe26165 in KonqView::reparseConfiguration (this=0x23dcba0) at /opt/kde/trunk/src/KDE/kdebase/apps/konqueror/src/konqview.cpp:1170
#16 0x00007ff6abe6033a in KonqMainWindow::reparseConfiguration (this=0x1142a50) at /opt/kde/trunk/src/KDE/kdebase/apps/konqueror/src/konqmainwindow.cpp:4776
#17 0x00007ff6abe6036b in KonqMainWindow::slotReconfigure (this=0x1142a50) at /opt/kde/trunk/src/KDE/kdebase/apps/konqueror/src/konqmainwindow.cpp:4758
#18 0x00007ff6abe7a62e in KonqMainWindow::qt_metacall (this=0x1142a50, _c=QMetaObject::InvokeMetaMethod, _id=90, _a=0x7fffb4316d20)
    at /opt/kde/trunk/build/KDE/kdebase/apps/konqueror/src/konqmainwindow.moc:423
#19 0x00007ff6a9771b20 in QMetaObject::activate (sender=0x1067fb0, from_signal_index=6, to_signal_index=6, argv=0x0) at /opt/kde/trunk/src/qt-copy/src/corelib/kernel/qobject.cpp:3117
#20 0x00007ff6a9772e6f in QMetaObject::activate (sender=0x1067fb0, m=0x7ff6aaa472e0, local_signal_index=2, argv=0x0) at /opt/kde/trunk/src/qt-copy/src/corelib/kernel/qobject.cpp:3194
#21 0x00007ff6aa633732 in KGlobalSettings::kdisplayFontChanged (this=0x1067fb0) at /opt/kde/trunk/build/KDE/kdelibs/kdeui/kglobalsettings.moc:115
#22 0x00007ff6aa635f15 in KGlobalSettings::Private::kdisplaySetFont (this=0x1069e80) at /opt/kde/trunk/src/KDE/kdelibs/kdeui/kernel/kglobalsettings.cpp:957
#23 0x00007ff6aa636058 in KGlobalSettings::Private::_k_slotNotifyChange (this=0x1069e80, changeType=1, arg=0) at /opt/kde/trunk/src/KDE/kdelibs/kdeui/kernel/kglobalsettings.cpp:815
#24 0x00007ff6aa6362be in KGlobalSettings::qt_metacall (this=0x1067fb0, _c=QMetaObject::InvokeMetaMethod, _id=9, _a=0x7fffb4317090) at /opt/kde/trunk/build/KDE/kdelibs/kdeui/kglobalsettings.moc:92
#25 0x00007ff6a9a91fff in QDBusConnectionPrivate::deliverCall (this=0xfbc3c0, object=0x1067fb0, msg=@0x2d23c38, metaTypes=@0x2d23c40, slotIdx=13)
    at /opt/kde/trunk/src/qt-copy/src/dbus/qdbusintegrator.cpp:891
#26 0x00007ff6a9a9d1e8 in QDBusCallDeliveryEvent::placeMetaCall (this=0x2d23bf0, object=0x1067fb0) at /opt/kde/trunk/src/qt-copy/src/dbus/qdbusintegrator_p.h:101
#27 0x00007ff6a976f9bc in QObject::event (this=0x1067fb0, e=0x2d23bf0) at /opt/kde/trunk/src/qt-copy/src/corelib/kernel/qobject.cpp:1115
#28 0x00007ff6a88c10ef in QApplicationPrivate::notify_helper (this=0xf69080, receiver=0x1067fb0, e=0x2d23bf0) at /opt/kde/trunk/src/qt-copy/src/gui/kernel/qapplication.cpp:4057
#29 0x00007ff6a88c1491 in QApplication::notify (this=0x7fffb4317ef0, receiver=0x1067fb0, e=0x2d23bf0) at /opt/kde/trunk/src/qt-copy/src/gui/kernel/qapplication.cpp:3604
#30 0x00007ff6aa6072cd in KApplication::notify (this=0x7fffb4317ef0, receiver=0x1067fb0, event=0x2d23bf0) at /opt/kde/trunk/src/KDE/kdelibs/kdeui/kernel/kapplication.cpp:307
#31 0x00007ff6a975b729 in QCoreApplication::notifyInternal (this=0x7fffb4317ef0, receiver=0x1067fb0, event=0x2d23bf0) at /opt/kde/trunk/src/qt-copy/src/corelib/kernel/qcoreapplication.cpp:606
#32 0x00007ff6a975f1c7 in QCoreApplication::sendEvent (receiver=0x1067fb0, event=0x2d23bf0) at ../../include/QtCore/../../../../src/qt-copy/src/corelib/kernel/qcoreapplication.h:213
#33 0x00007ff6a975bc7b in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0xf51100) at /opt/kde/trunk/src/qt-copy/src/corelib/kernel/qcoreapplication.cpp:1244
#34 0x00007ff6a975be52 in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at /opt/kde/trunk/src/qt-copy/src/corelib/kernel/qcoreapplication.cpp:1140
#35 0x00007ff6a978adf3 in QCoreApplication::sendPostedEvents () at ../../include/QtCore/../../../../src/qt-copy/src/corelib/kernel/qcoreapplication.h:218
#36 0x00007ff6a978a035 in postEventSourceDispatch (s=0xf6ba20) at /opt/kde/trunk/src/qt-copy/src/corelib/kernel/qeventdispatcher_glib.cpp:209
#37 0x00007ff6a513420a in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#38 0x00007ff6a51378e0 in ?? () from /usr/lib/libglib-2.0.so.0
#39 0x00007ff6a5137a7c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#40 0x00007ff6a9789346 in QEventDispatcherGlib::processEvents (this=0xf69250, flags={i = -1271825408}) at /opt/kde/trunk/src/qt-copy/src/corelib/kernel/qeventdispatcher_glib.cpp:324
#41 0x00007ff6a89699df in QGuiEventDispatcherGlib::processEvents (this=0xf69250, flags={i = -1271825312}) at /opt/kde/trunk/src/qt-copy/src/gui/kernel/qguieventdispatcher_glib.cpp:202
#42 0x00007ff6a97589d7 in QEventLoop::processEvents (this=0x7fffb4317d30, flags={i = -1271825184}) at /opt/kde/trunk/src/qt-copy/src/corelib/kernel/qeventloop.cpp:149
#43 0x00007ff6a9758be4 in QEventLoop::exec (this=0x7fffb4317d30, flags={i = -1271825072}) at /opt/kde/trunk/src/qt-copy/src/corelib/kernel/qeventloop.cpp:196
#44 0x00007ff6a975bf74 in QCoreApplication::exec () at /opt/kde/trunk/src/qt-copy/src/corelib/kernel/qcoreapplication.cpp:888
#45 0x00007ff6a88c0e4c in QApplication::exec () at /opt/kde/trunk/src/qt-copy/src/gui/kernel/qapplication.cpp:3526
#46 0x00007ff6abeaeffc in kdemain (argc=2, argv=0x7fffb4318948) at /opt/kde/trunk/src/KDE/kdebase/apps/konqueror/src/konqmain.cpp:257
#47 0x0000000000400907 in main (argc=2, argv=0x7fffb4318948) at /opt/kde/trunk/build/KDE/kdebase/apps/konqueror/src/konqueror_dummy.cpp:3
Comment 1 peaches 2009-05-11 11:19:46 UTC
forgot
KDE trunk r965053, qt-copy r964678
Comment 2 Anselmo L. S. Melo (anselmolsm) 2009-06-21 03:17:12 UTC
The scenario described was reproduced here, but konqueror hasn't crashed.

My setup:
Konqueror Version 4.2.92 (KDE 4.2.92 (KDE 4.3 >= 20090617))
Using KDE 4.2.92 (KDE 4.2.92 (KDE 4.3 >= 20090617)) - svn r984201
qt-copy r978427
Comment 3 Dario Andres 2009-06-29 16:57:00 UTC
*** Bug 198291 has been marked as a duplicate of this bug. ***
Comment 4 Dario Andres 2009-06-29 16:59:53 UTC
*** Bug 198295 has been marked as a duplicate of this bug. ***
Comment 5 dr.Chaos 2009-08-10 18:03:54 UTC
*** Bug 202868 has been marked as a duplicate of this bug. ***
Comment 6 Dario Andres 2009-08-12 18:32:41 UTC
*** Bug 200839 has been marked as a duplicate of this bug. ***
Comment 7 Dario Andres 2009-08-12 18:33:54 UTC
Updated backtrace from bug 203473:

Thread 1 (Thread 0xb801e700 (LWP 26192)):
[KCrash Handler]
#6  0x45192abd in DOM::NodeImpl::traverseNextNode (this=<value optimized out>,
stayWithin=) at
/var/tmp/portage/kde-base/kdelibs-4.3.0/work/kdelibs-4.3.0/khtml/xml/dom_nodeimpl.cpp:753
#7  0x451087e8 in KHTMLPart::runAdFilter (this=0xabb6bd8) at
/var/tmp/portage/kde-base/kdelibs-4.3.0/work/kdelibs-4.3.0/khtml/khtml_part.cpp:6558
#8  0x4510e046 in KHTMLPart::reparseConfiguration (this=0xabb6bd8) at
/var/tmp/portage/kde-base/kdelibs-4.3.0/work/kdelibs-4.3.0/khtml/khtml_part.cpp:5861
#9  0x451604c7 in KHTMLPartBrowserExtension::qt_metacall (this=) at
/var/tmp/portage/kde-base/kdelibs-4.3.0/work/kdelibs-4.3.0/khtml/khtml_ext.cpp:364
#10 0x4113fc15 in QMetaMethod::invoke (this=) at kernel/qmetaobject.cpp:1522
#11 0x4114031f in QMetaObject::invokeMethod (obj=) at
kernel/qmetaobject.cpp:1114
#12 0x4169f123 in KonqView::callExtensionMethod (this=) at
/usr/include/qt4/QtCore/qobjectdefs.h:387
#13 0x4169f191 in KonqView::reparseConfiguration (this=<value optimized out>)
at
/var/tmp/portage/kde-base/konqueror-4.3.0-r1/work/konqueror-4.3.0/konqueror/src/konqview.cpp:1170
#14 0x416fbcf3 in KonqMainWindow::reparseConfiguration (this=<value optimized
out>) at
/var/tmp/portage/kde-base/konqueror-4.3.0-r1/work/konqueror-4.3.0/konqueror/src/konqmainwindow.cpp:4817
Comment 8 Dario Andres 2009-09-07 14:16:00 UTC
*** Bug 206560 has been marked as a duplicate of this bug. ***
Comment 9 FiNeX 2009-09-07 21:28:21 UTC
*** Bug 206657 has been marked as a duplicate of this bug. ***
Comment 10 Maksim Orlovich 2009-09-19 18:45:15 UTC
*** Bug 204210 has been marked as a duplicate of this bug. ***
Comment 11 Maksim Orlovich 2009-09-19 18:45:28 UTC
*** Bug 198787 has been marked as a duplicate of this bug. ***
Comment 12 Maksim Orlovich 2009-09-19 18:45:52 UTC
*** Bug 190833 has been marked as a duplicate of this bug. ***
Comment 13 Maksim Orlovich 2009-09-19 19:59:59 UTC
SVN commit 1025797 by orlovich:

Fix crash in runAdFilter --- take in account that when we're removing a node its kids 
will be removed as well...

BUG: 192308


 M  +5 -1      khtml_part.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1025797
Comment 14 Maksim Orlovich 2009-09-19 20:01:16 UTC
SVN commit 1025798 by orlovich:

automatically merged revision 1025797:
Fix crash in runAdFilter --- take in account that when we're removing a node its kids 
will be removed as well...

BUG: 192308

 M  +5 -1      khtml_part.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1025798