automatically merged revision 1025797: Fix crash in runAdFilter --- take in account that when we're removing a node its kids will be removed as well...

BUG: 192308

svn path=/trunk/KDE/kdelibs/; revision=1025798